--- a/Style.css
+++ b/Style.css
@@ -3,10 +3,10 @@
 
 }
 
-   /*body*/
+/*body*/
 
 body {
-    background-color: rgba(164, 255, 255, 0.158);
+    background-image: url(testbody.jpg);
     /*animation: blinking 2s infinite;*/
 }
 
@@ -15,9 +15,11 @@ body {
 
 
 header {
-    background-color: rgba(255, 166, 0, 0.178);
+    background-color: black;
     margin: -0.5%;
     height: 70px;
+    position: fixed;
+    padding-right: 1000px;
 
 }
 
@@ -32,7 +34,7 @@ div.navbar {
 div.navtext {
     height: 100%;
     display: flex;
-    padding-left: 20%;
+    padding-left:45%;
     width: 100%;
     padding-bottom: 10px;
 }
@@ -43,47 +45,47 @@ img#logo {
 
 }
 
-div#special {
-    padding-left: 100px;
-}
-
-
 div.nav {
     font-size: 1.3em;
     margin-left: 20px;
-    margin-top: 1%;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    margin-top: 5px;
+    padding-bottom: 35px;
+    padding-top: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
     height: 10%;
-    background-color: blueviolet;
+
+    border-radius: 10px;
+
 }
 
 div.nav:hover {
-    /* animation: blinkbacks 2s infinite; */
+    text-decoration: 3px solid overline;
+}
+
+div.nav:active {
+    text-decoration: 3px solid overline;;
 }
 
 a.navobj {
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
     font-family: 'Indie Flower', cursive;
     font-weight: bolder;
     font-size: 1em;
 
 }
 
-a.navobj:hover {
-    color: red;
-    /* animation: blinks 2s infinite; */
-}
+a.navobj:hover {}
 
 /*Section style*/
-/*
+
 section.sectionformat {
     margin-right: 10%;
     margin-left: 10%;
     font-size: 2.25vw;
-    margin-bottom: 1em;
-    background-image: url(websitebackground2.png);
+    padding-top: 20%;
+    background-color: aliceblue;
 }
 
 h1.heading {
@@ -95,9 +97,14 @@ h1.heading {
     padding-bottom: 10%;
     padding-top: 50px;
     color: white;
-    /* animation: blinking 2s infinite; */
+     animation: blinking 2s infinite; 
 }
 
+section#space {
+    margin-top: 30%;
+    margin-bottom: 30%;
+}
+/*
 a.links {
     text-decoration: none;
     color: violet;
@@ -112,7 +119,7 @@ p.links {
 }
 
 a.links:hover {
-    /* animation: blinks 2s infinite; */
+    /* animation: blinks 2s infinite; 
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -135,7 +142,7 @@ a.inlinelinks {
 a.inlinelinks:hover {
     color: red;
     font-family: 'Courier New', Courier, monospace;
-    /* animation: blinks 2s infinite; */
+    /* animation: blinks 2s infinite; 
 }
 
 a.inlinelinks:active {
@@ -149,7 +156,7 @@ a.inlinelinks:active {
 h2.subH {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 30px;
-    /* animation: blinking 2s infinite; */
+    /* animation: blinking 2s infinite; 
     text-align: center;
 }
 
@@ -160,7 +167,7 @@ section {
     padding-top: 5%;
     padding-bottom: 5%;
     border: rgb(80, 80, 146) solid 10px;
-    /* animation: borderblinking 2s infinite; */
+    /* animation: borderblinking 2s infinite; 
 
 }
 
@@ -171,7 +178,7 @@ footer {
     padding-top: 5%;
     padding-bottom: 5%;
     border: rgb(80, 80, 146) solid 10px;
-    /* animation: borderblinking 2s infinite; */
+    /* animation: borderblinking 2s infinite; 
 }
 
 img.scrollup {
