--- a/Style.css
+++ b/Style.css
@@ -16,11 +16,11 @@ body {
 
 header {
     background-color: black;
-    margin: -0.5%;
+    margin: -0.75%;
     height: 70px;
     position: fixed;
-    padding-right: 1000px;
-
+    padding-right: 50%;
+    font-family: Arial, Helvetica, sans-serif, sans-serif;
 }
 
 
@@ -34,7 +34,7 @@ div.navbar {
 div.navtext {
     height: 100%;
     display: flex;
-    padding-left:45%;
+    padding-left:20%;
     width: 100%;
     padding-bottom: 10px;
 }
@@ -54,7 +54,7 @@ div.nav {
     padding-left: 10px;
     padding-right: 10px;
     height: 10%;
-
+    font-family: Arial, Helvetica, sans-serif, sans-serif;
     border-radius: 10px;
 
 }
