--- a/Style.css
+++ b/Style.css
@@ -27,14 +27,14 @@ div.navbar {
     height: 100%;
     display: flex;
     width: 100%;
-    
+
     padding-bottom: 10px;
 }
 
 div.navtext {
     height: 100%;
     display: flex;
-    padding-left:20%;
+    padding-left: 20%;
     width: 100%;
     padding-bottom: 10px;
 
@@ -85,7 +85,7 @@ a.navobj:hover {}
 
 section.sectionformat {
     font-size: 2.25vw;
-    padding-top: 4.2%;
+    padding-top: 4.0%;
     background-color: aliceblue;
 }
 
@@ -116,7 +116,7 @@ img#headingimg:hover {
 h1.heading {
     font-size: 3em;
     color: white;
-    position:absolute;
+    position: absolute;
     bottom: 20%;
     padding-left: 40%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -130,45 +130,129 @@ h1.heading:hover {
 /* section spacer*/
 
 div.bar {
-    background-color: rgb(202, 98, 0);
-    padding-top: 5%;
+    background-color: rgb(0, 48, 119);
+    padding-top: 2%;
     margin: -1%;
 }
+
 /* second section */
 
 div#secondsection {
     width: 110%;
     margin-left: -5%;
-    background: rgb(75,44,0);
-    background: linear-gradient(90deg, rgba(75,44,0,1) 0%, rgba(180,96,0,1) 35%, rgba(0,76,205,1) 100%);
+    background: rgb(75, 44, 0);
+    background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
     position: absolute;
 }
 
-div#smolimgplace {
-
-
+section#aboutus {
+    margin-bottom: 42.1%;
 }
 
 img#smolimg {
-    width: 40%;
+    width: 30%;
     margin-top: 6%;
     margin-left: 7%;
     margin-bottom: 5%;
-    border-radius:  10px;
+    border-radius: 25px;
+    border: 50px solid rgba(45, 143, 255, 0.705);
     float: left;
 
 }
 
 div#sidetext {
     position: relative;
-    left: -3%;
+    left: 3%;
     padding-top: 5%;
-    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-h1#subH1 {
+h1.subH1 {
     font-size: 3em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    color: aliceblue;
 }
+
+p.text {
+    font-size: 1.5em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
+
+span#indent {
+    padding-left: 5%;
+}
+
+p#aboutbutton {
+    background-color: rgb(253, 152, 1);
+    position: absolute;
+    padding: 20px;
+    border-radius: 10px;
+    left: 40%;
+}
+
+a#learnlink {
+    color: aliceblue;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    font-weight: bolder;
+}
+
+p#aboutbutton:hover {
+    background-color: rgba(253, 152, 1, 0.774);
+
+}
+
+/* section spacer*/
+
+div.bars {
+    background-color: rgb(0, 48, 119);
+    padding-top: 0.7%;
+    position: relative;
+    width: 110%;
+    margin-left: -0.4%;
+    margin-top: 2%;
+}
+
+/* sponsor section */
+
+section.sponsorsection {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(64, 142, 255, 1) 97%);
+    width: 110%;
+    margin-left: -5%;
+    padding-top: 1%;
+    padding-bottom: 30%;
+}
+
+h1#subH12 {
+    position:relative;
+}
+
+h1.placeholder {
+    font-size: 6em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder;
+    text-align: center;
+    padding-top: 10%;
+}
+/* section spacer*/
+
+div.barss {
+    background-color: rgb(0, 48, 119);
+    padding-top: 0.7%;
+    position: relative;
+    width: 110%;
+    margin-left: -0.4%;
+    margin-top: 0%;
+}
+
+/*footer*/
+
+
 
 /*
 a.links {
