--- a/Style.css
+++ b/Style.css
@@ -268,16 +268,17 @@ div.footbar {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
 }
 
 div.foot {
     font-size: 1.25em;
     text-align: center;
-    padding-bottom: 35px;
+    padding-bottom: 25px;
     padding-top: 2%;
     height: 50%;
-    width: calc(30% -30px);
+    width: 15%;
+    position: relative;
 }
 
 h2 {
@@ -297,7 +298,7 @@ a.footobj {
 }
 
 img#logos {
-    width: 3%;
+    width: 10%;
     padding-top: 1%;
 }
 
