--- a/Style.css
+++ b/Style.css
@@ -257,10 +257,12 @@ footer {
     background-color: rgb(34, 34, 34);
     width: 110%;
     margin-left: -5%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+    bottom: 0;
+    position: relative;
 }
+
 
 div.footbar {
     height: 1px;
@@ -285,7 +287,7 @@ h2 {
     font-size: 1.4em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: left;
-    color: aliceblue; 
+    color: aliceblue;
     padding-left: 10%;
 }
 
@@ -300,6 +302,89 @@ a.footobj {
 img#logos {
     width: 10%;
     padding-top: 1%;
+}
+
+/*About us page*/
+
+div#secondsection1 {
+    width: 110%;
+    margin-left: -5%;
+    background: rgb(75, 44, 0);
+    background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
+    padding-bottom: 40%;
+    margin-bottom: -1%;
+}
+
+section#aboutintro {
+    margin-bottom: 1%;
+}
+
+div#smolimgplace1 {
+    float: right;
+    position: relative;
+    padding-right: 10%;
+}
+
+img#smolimg1 {
+    width: 70%;
+    margin-top: 20%;
+    margin-right: 25%;
+    margin-bottom: 5%;
+    border-radius: 25px;
+    border: 50px solid rgba(45, 143, 255, 0.705);
+
+
+}
+
+div#sidetext1 {
+    position: relative;
+    left: 3%;
+    padding-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    float: left;
+    width: 30%;
+}
+
+h1.subH1 {
+    font-size: 3em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    color: aliceblue;
+}
+
+p.text1 {
+    font-size: 1.5em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
+
+/* members sectionin aboutus*/
+section#members {
+    padding-top: 30%;
+    margin-left: -0.5%;
+    background: rgb(181, 112, 0);
+    background: radial-gradient(circle, rgba(181, 112, 0, 1) 0%, rgba(0, 109, 238, 1) 100%);
+}
+
+div#memba {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    display: flex;
+    padding-bottom: 20%;
+}
+
+div.member {
+    font-size: .65em;
+    margin-bottom: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: fit-content;
+    padding: 7%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
 
