--- a/Style.css
+++ b/Style.css
@@ -211,10 +211,10 @@ p#aboutbutton:hover {
 div.bars {
     background-color: rgb(0, 48, 119);
     padding-top: 0.7%;
-    position: relative;
+    position: absolute;
     width: 110%;
-    margin-left: -0.4%;
-    margin-top: 2%;
+    margin-left: -0.5%;
+    margin-top: 1%;
 }
 
 /* sponsor section */
@@ -247,7 +247,7 @@ div.barss {
     padding-top: 0.7%;
     position: relative;
     width: 110%;
-    margin-left: -0.4%;
+    margin-left: -0.5%;
     margin-top: 0%;
 }
 
@@ -361,10 +361,16 @@ p.text1 {
 
 /* members sectionin aboutus*/
 section#members {
-    padding-top: 30%;
+    padding-top: 1%;
     margin-left: -0.5%;
+    width: 101%;
+    ;
     background: rgb(181, 112, 0);
     background: radial-gradient(circle, rgba(181, 112, 0, 1) 0%, rgba(0, 109, 238, 1) 100%);
+}
+
+h1#members {
+    padding-bottom: 15%;
 }
 
 div#memba {
@@ -373,20 +379,142 @@ div#memba {
     justify-content: center;
     display: flex;
     padding-bottom: 20%;
+
 }
 
 div.member {
-    font-size: .65em;
-    margin-bottom: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
+    font-size: 1em;
+    margin-bottom: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
     width: fit-content;
-    padding: 7%;
+    padding: 3%;
     display: flex;
     flex-direction: column;
     text-align: center;
+    background-color: white;
+    border-radius: 5%;
+    margin-top: 5%;
 }
 
+/*current events page*/
+
+section#CurrentEintro {
+    width: 110%;
+    margin-left: -5%;
+    padding-top: 3%;
+    padding-bottom: 10%;
+    background: rgb(34, 116, 195);
+    background: linear-gradient(0deg, rgba(34, 116, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+}
+
+/*slideshow stuffs*/
+/* * {box-sizing:border-box} */
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+div.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+div#dots {
+    background-color: orange;
+    padding-top: 0.4%;
+    padding-bottom: 0.4%;
+    padding-left: 0.1%;
+    width: 3%;
+    margin-left: 49%;
+    border-radius: 10%;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .8
+    }
+
+    to {
+        opacity: 1
+    }
+}
 
 /*
 a.links {
