--- a/Style.css
+++ b/Style.css
@@ -19,7 +19,7 @@ header {
     position: fixed;
     padding-right: 50%;
     top: 0;
-    padding-top: 1.5%;
+    padding-top: 1.25%;
 }
 
 
@@ -85,7 +85,7 @@ a.navobj:hover {}
 
 section.sectionformat {
     font-size: 2.25vw;
-    padding-top: 4.0%;
+    padding-top: 3.8%;
     background-color: aliceblue;
 }
 
@@ -214,7 +214,7 @@ div.bars {
     position: absolute;
     width: 110%;
     margin-left: -0.5%;
-    margin-top: 1%;
+    margin-top: 0.3%;
 }
 
 /* sponsor section */
@@ -245,10 +245,10 @@ h1.placeholder {
 div.barss {
     background-color: rgb(0, 48, 119);
     padding-top: 0.7%;
-    position: relative;
+    position: absolute;
     width: 110%;
     margin-left: -0.5%;
-    margin-top: 0%;
+    bottom: 54%;
 }
 
 /*footer*/
@@ -359,12 +359,17 @@ p.text1 {
     color: white;
 }
 
+/*about us bar*/
+div#aboutusbar {
+    margin-top: 0%;
+}
+
+
 /* members sectionin aboutus*/
 section#members {
     padding-top: 1%;
     margin-left: -0.5%;
     width: 101%;
-    ;
     background: rgb(181, 112, 0);
     background: radial-gradient(circle, rgba(181, 112, 0, 1) 0%, rgba(0, 109, 238, 1) 100%);
 }
@@ -379,7 +384,7 @@ div#memba {
     justify-content: center;
     display: flex;
     padding-bottom: 20%;
-
+    margin-top: -18%;
 }
 
 div.member {
@@ -409,11 +414,12 @@ section#CurrentEintro {
 }
 
 /*slideshow stuffs*/
-/* * {box-sizing:border-box} */
+
 
 /* Slideshow container */
 .slideshow-container {
     max-width: 1000px;
+
     position: relative;
     margin: auto;
 }
@@ -463,14 +469,6 @@ div.text {
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
 
 /* The dots/bullets/indicators */
 div#dots {
