--- a/Style.css
+++ b/Style.css
@@ -79,19 +79,28 @@ a.navobj {
 
 a.navobj:hover {}
 
+/* keeping an overline when on the page */
 
-
-/*Front image*/
-
-section.sectionformat {
-    font-size: 2.25vw;
-    padding-top: 3.8%;
-    background-color: aliceblue;
+div#sponsors {
+    border-top: 3px solid white
 }
-
-div#centralimg {
-
-    width: 100%;
+div#home {
+    border-top: 3px solid white
+}
+div#about {
+    border-top: 3px solid white
+}
+div#currente {
+    border-top: 3px solid white
+}
+div#achievenments {
+    border-top: 3px solid white
+}
+div#resources {
+    border-top: 3px solid white
+}
+div#contactus {
+    border-top: 3px solid white
 }
 
 img#centrallimg {
@@ -114,7 +123,7 @@ img#headingimg:hover {
 }
 
 h1.heading {
-    font-size: 3em;
+    font-size: 7em;
     color: white;
     position: absolute;
     bottom: 20%;
@@ -513,6 +522,60 @@ div#dots {
         opacity: 1
     }
 }
+
+/*resources page*/
+
+section#Achievementsintro {
+    width: 110%;
+    margin-left: -5%;
+    padding-top: 3%;
+    padding-bottom: 10%;
+    background: rgb(34, 116, 195);
+    background: linear-gradient(0deg, rgba(34, 116, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+}
+
+
+/*resources page*/
+
+section#resourceintro {
+    width: 110%;
+    margin-left: -5%;
+
+    padding-bottom: 10%;
+    background: rgb(34, 116, 195);
+    background: linear-gradient(0deg, rgba(34, 116, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+}
+
+h1#subH13 {
+    padding-top: 2%;
+}
+
+
+div#secondsection1 {
+    width: 110%;
+    margin-left: -5%;
+    background: rgb(75, 44, 0);
+    background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
+    padding-bottom: 40%;
+    margin-bottom: -1%;
+}
+
+div#sidetext2 {
+    float: right;
+    position: relative;
+    padding-left: 10%;
+}
+
+div#sidetext1 {
+    position: relative;
+    left: 3%;
+    padding-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    float: left;
+    width: 30%;
+}
+
 
 /*
 a.links {
