--- a/Style.css
+++ b/Style.css
@@ -7,6 +7,7 @@
 
 body {
     /*animation: blinking 2s infinite;*/
+    overflow-x: hidden;
 }
 
 /* Navbar styling */
@@ -37,6 +38,7 @@ div.navtext {
     padding-left: 20%;
     width: 100%;
     padding-bottom: 10px;
+    padding-top: -3px;
 
 }
 
@@ -56,7 +58,7 @@ div.nav {
     padding-right: 10px;
     height: 10%;
     margin-bottom: 1px;
-
+    
 }
 
 div.nav:hover {
@@ -74,7 +76,7 @@ a.navobj {
     font-weight: bolder;
     font-size: 1em;
     font-family: Arial, Helvetica, sans-serif, sans-serif;
-    padding-top: 7px;
+    padding-top: -3px;
 }
 
 a.navobj:hover {}
