--- a/Style.css
+++ b/Style.css
@@ -925,6 +925,7 @@ p.text {
     padding-right: 0%;
     top: 0;
     padding-top: 1.25%;
+    width: 105%;
 }
 
 
@@ -1113,7 +1114,7 @@ p#aboutbutton {
     position: absolute;
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 2px;
+    padding-top: 0px;
     padding-bottom: 5px;
     border-radius: 5px;
     left: 60%;
@@ -1137,12 +1138,11 @@ p#aboutbutton:hover {
 
 div.bars {
     background-color: rgb(0, 48, 119);
-    margin-top: 1%;
-    padding-top: 0.7%;
+    padding-top: 1.35%;
     position: absolute;
-    top: 50;
+    top: 48.83%;
     width: 110%;
-    margin-left: -1%;
+    margin-left: -3%;
 }
 
 /* sponsor section */
@@ -1153,15 +1153,16 @@ section.sponsorsection {
     width: 110%;
     margin-left: -5%;
     padding-top: 1%;
-    padding-bottom: 30%;
+    padding-bottom: 65%;
 }
 
 h1#subH12 {
     position: relative;
+
 }
 
 h1.placeholder {
-    font-size: 6em;
+    font-size: 3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bolder;
     text-align: center;
@@ -1186,8 +1187,7 @@ footer {
     width: 110%;
     margin-left: -5%;
     padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    bottom: 0;
+    margin-bottom: -10%;
     position: relative;
 }
 
@@ -1202,17 +1202,16 @@ div.footbar {
 }
 
 div.foot {
-    font-size: 1.25em;
+    font-size: 0.3em;
     text-align: center;
-    padding-bottom: 25px;
     padding-top: 2%;
-    height: 50%;
+    height: 20%;
     width: 15%;
     position: relative;
 }
 
 h2 {
-    font-size: 1.4em;
+    font-size: 0.7em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: left;
     color: aliceblue;
