--- a/Style.css
+++ b/Style.css
@@ -21,32 +21,52 @@ header {
     padding-right: 50%;
     top: 0;
     padding-top: 1.25%;
+    width: 105%;
 }
 
+img#logo {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    left: 1%;
+}
+
+div#title {
+    position: absolute;
+    left: 5%;
+    top: -1%;
+    font-size: 3em;
+    width: 100%;
+}
+
+a#titletext {
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif, sans-serif;
+}
 
 div.navbar {
     height: 100%;
     display: flex;
     width: 100%;
-
     padding-bottom: 10px;
+
+    position: relative;
 }
 
 div.navtext {
+    padding-left: 49%;
     height: 100%;
     display: flex;
-    padding-left: 20%;
     width: 100%;
     padding-bottom: 10px;
     padding-top: -3px;
 
 }
 
-img#logo {
-    width: 70px;
-    height: 70px;
 
-}
 
 div.nav {
     font-size: 1.3em;
@@ -283,7 +303,7 @@ footer {
     width: 110%;
     margin-left: -5%;
     padding-top: 0.5%;
-    padding-bottom: 0.5%;
+    margin-bottom: -1%;
     bottom: 0;
     position: relative;
 }
