--- a/Style.css
+++ b/Style.css
@@ -32,19 +32,18 @@ img#logo {
 }
 
 div#title {
-    position: absolute;
-    left: 5%;
-    top: -1%;
-    font-size: 3em;
-    width: 100%;
+
 }
 
 a#titletext {
     text-decoration: none;
     color: white;
-    width: 100%;
+    width: 40%;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif, sans-serif;
+    position: absolute;
+    left: 5%;
+    font-size: 3em;
 }
 
 div.navbar {
@@ -137,6 +136,7 @@ img#centrallimg {
     width: 110%;
     margin-left: -1%;
     position: relative;
+    margin-top: -10%;
 
 }
 
@@ -170,9 +170,9 @@ h1.heading:hover {
 
 div.bar {
     background-color: rgb(0, 48, 119);
-    padding-top: 1%;
+    padding-top: 0.7%;
     position: absolute;
-    top: 66vw;
+    top: 56.5vw;
     width: 110%;
     margin-left: -1%;
 }
@@ -588,7 +588,7 @@ div#dots {
     }
 }
 
-/*resources page*/
+/*achievements page*/
 
 section#Achievementsintro {
     width: 110%;
@@ -603,12 +603,32 @@ section#Achievementsintro {
 /*resources page*/
 
 section#resourceintro {
-    width: 110%;
-    margin-left: -5%;
-    padding-top: 10vw;
-    background: rgb(75, 44, 0);
-    background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
+    width: 100%;
+    margin-left: 0.0%;
+    margin-right: 10%;
+    background-color: white;
 
+}
+
+hr {
+    width: 50%;
+}
+
+p#resourcelink {
+    text-align: center 
+    
+}
+
+a {
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: orange;
+    font-weight: bolder;
+}
+
+h1#resourceheading {
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
 }
 
 
