--- a/Style.css
+++ b/Style.css
@@ -250,10 +250,9 @@ p#aboutbutton:hover {
 
 div.bars {
     background-color: rgb(0, 48, 119);
-    margin-top: 1%;
+    margin-top: -1%;
     padding-top: 0.7%;
     position: absolute;
-    top: 50;
     width: 110%;
     margin-left: -1%;
 }
@@ -263,25 +262,97 @@ div.bars {
 /* sponsor section */
 
 section.sponsorsection {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(64, 142, 255, 1) 97%);
+    background-color: lightblue;
     width: 110%;
     margin-left: -5%;
     padding-top: 1%;
-    padding-bottom: 30%;
+    padding-bottom: 3%;
 }
 
 h1#subH12 {
     position: relative;
+    color: black;
 }
 
-h1.placeholder {
-    font-size: 6em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
-    text-align: center;
-    padding-top: 10%;
+/*slideshow*/
+/* Slideshow container */
+.slideshow-container {
+    max-width: fit-content;
+    max-height: fit-content;
+    position: relative;
+    margin: auto;
 }
+
+img.sponslideimage {
+    max-width: 12.1vw;
+    max-height: 8vw;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.sprev,
+.snext {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -2%;
+    padding: 2%;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.snext {
+    right: 0;
+    border-radius: 1% 0% 0% 1%;
+    position: absolute;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.sprev:hover,
+.snext:hover {
+    background-color: aliceblue;
+}
+
+/* Caption text */
+div.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .8
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+
 
 /* section spacer*/
 
@@ -353,13 +424,25 @@ section.sectionformat {
     margin-left: -0.5%;
     width: 101%;
     padding-top: 40%;
-    background-image: url(websitebackground.png);
+    background-color: rgba(0, 0, 0, 0.897);
 }
 
-div#centralimg {
-    width: 110%;
-    margin-left: -5%;
-    max-height: 10%;
+h1#abouth1 {
+    font-size: 3em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    color: aliceblue;
+    position: absolute;
+    top: 10%;
+    left: 45%;
+}
+
+img#centralimg1 {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    padding-top: -3%;
 
 }
 
@@ -464,9 +547,23 @@ div.member {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: white;
+    background-color: rgb(255, 201, 100);
     border-radius: 5%;
     margin-top: 5%;
+}
+
+img#memba1 {
+    border-radius: 10%;
+}
+h4#memba {
+    font-family: 'Courier New', Courier, monospace;
+
+
+}
+
+p#memba {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
 }
 
 /*current events page*/
@@ -610,6 +707,7 @@ section#resourceintro {
 
 hr {
     width: 50%;
+
 }
 
 p#resourcelink {
@@ -736,230 +834,6 @@ h1#black {
 }
 
 
-
-/*
-a.links {
-    text-decoration: none;
-    color: violet;
-
-    font-family: 'Indie Flower', cursive;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-p.links {
-    text-align: center;
-}
-
-a.links:hover {
-    /* animation: blinks 2s infinite; 
-    font-family: 'Courier New', Courier, monospace;
-}
-
-a.links:active {
-    text-decoration: dotted;
-    color: brown;
-}
-
-a.links:visited {
-    text-decoration: dashed;
-    color: darkorchid;
-}
-
-a.inlinelinks {
-    text-decoration: none;
-    color: violet;
-
-}
-
-a.inlinelinks:hover {
-    color: red;
-    font-family: 'Courier New', Courier, monospace;
-    /* animation: blinks 2s infinite; 
-}
-
-a.inlinelinks:active {
-    text-decoration: dotted;
-    color: brown;
-}
-
-
-
-
-h2.subH {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-    /* animation: blinking 2s infinite; 
-    text-align: center;
-}
-
-section {
-    background-color: rgb(169, 245, 245);
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    border: rgb(80, 80, 146) solid 10px;
-    /* animation: borderblinking 2s infinite; 
-
-}
-
-footer {
-    background-color: rgb(169, 245, 245);
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    border: rgb(80, 80, 146) solid 10px;
-    /* animation: borderblinking 2s infinite; 
-}
-
-img.scrollup {
-    width: 30px;
-
-}
-
-div.scroll {
-    position: fixed;
-    background-color: white;
-    border: white solid 5px;
-    bottom: 25px;
-    left: 635px;
-    padding-left: 10px;
-    padding-right: 10px;
-    opacity: 80%;
-}
-
-@keyframes blinks {
-    0% {
-        color: greenyellow;
-    }
-
-    50% {
-        color: orange;
-    }
-
-    100% {
-        color: antiquewhite;
-    }
-}
-
-@keyframes blinkbacks {
-    0% {
-        background-color: blue;
-    }
-
-    50% {
-        background-color: purple;
-    }
-
-    100% {
-        background-color: red;
-    }
-}
-
-@keyframes blinking {
-    0% {
-        color: red;
-    }
-
-    10% {
-        color: whitesmoke;
-    }
-
-    20% {
-        color: green;
-    }
-
-    30% {
-        color: yellow;
-    }
-
-    40% {
-        color: orange;
-    }
-
-    50% {
-        color: rgb(81, 173, 81);
-    }
-
-    60% {
-        color: orangered;
-    }
-
-    70% {
-        color: rgb(130, 137, 233);
-    }
-
-    80% {
-        color: rgb(98, 128, 18);
-    }
-
-    90% {
-        color: rgb(224, 112, 146);
-    }
-
-    100% {
-        color: rgb(80, 80, 146);
-    }
-}
-
-@keyframes borderblinking {
-    0% {
-        border-color: red;
-    }
-
-    10% {
-        border-color: whitesmoke;
-    }
-
-    20% {
-        border-color: green;
-    }
-
-    30% {
-        border-color: yellow;
-    }
-
-    40% {
-        border-color: orange;
-    }
-
-    50% {
-        border-color: rgb(81, 173, 81);
-    }
-
-    60% {
-        border-color: orangered;
-    }
-
-    70% {
-        border-color: rgb(130, 137, 233);
-    }
-
-    80% {
-        border-color: rgb(98, 128, 18);
-    }
-
-    90% {
-        border-color: rgb(224, 112, 146);
-    }
-
-    100% {
-        border-color: rgb(80, 80, 146);
-    }
-}
-
-
-p.text {
-    font-family: 'Indie Flower', cursive;
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-
-}
-
-*/
 
 @media (max-width : 750px) {
     header {
@@ -1192,20 +1066,17 @@ p.text {
     }
 
     /* sponsor section */
-
-    section.sponsorsection {
-        background: rgb(2, 0, 36);
-        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(64, 142, 255, 1) 97%);
-        width: 110%;
-        margin-left: -5%;
-        padding-top: 1%;
-        padding-bottom: 65%;
+    section.sponsorssection {
+        background-color: aliceblue;
     }
+
 
     h1#subH12 {
         position: relative;
 
     }
+
+
 
     h1.placeholder {
         font-size: 3em;
@@ -1601,6 +1472,11 @@ p.text {
         margin-bottom: -10%;
     }
 
+    /*sponsor page*/
+    img#bankais {
+        border-radius: 10%;
+    }
+
     /*contactus page*/
 
     section#contactusintro {
@@ -1636,7 +1512,7 @@ p.text {
     }
 
 }
-
+/* 
 @media (min-width : 1720px) {
     div.bars {
         background-color: rgb(0, 48, 119);
@@ -1655,7 +1531,7 @@ p.text {
         margin-right: 10%;
     }
 
-    /*contactus page*/
+    /*contactus page*/ /*
 
     section#contactusintro {
         width: 110%;
@@ -1694,7 +1570,7 @@ p.text {
 
 @media (min-width : 1200px) {
 
-    /*nav bar*/
+    /*nav bar*/ /*
     header {
         background-color: black;
         margin: -0.75%;
@@ -1780,7 +1656,7 @@ p.text {
 
     a.navobj:hover {}
 
-    /* keeping an overline when on the page */
+    /* keeping an overline when on the page */ /*
 
     div#sponsors {
         border-top: 3px solid white
@@ -1810,7 +1686,7 @@ p.text {
         border-top: 3px solid white
     }
 
-    /*main page*/
+    /*main page*/ /*
     img#centrallimg {
         width: 110%;
         margin-left: -1%;
@@ -1871,7 +1747,7 @@ p.text {
         margin-right: 10%;
     }
 
-    /*ABout us page*/
+    /*ABout us page*/ /*
     section.sectionformat {
         margin-left: -0.5%;
         width: 101%;
@@ -1944,7 +1820,7 @@ p.text {
     }
     
 
-    /*contactus page*/
+    /*contactus page*/ /*
 
     section#contactusintro {
         width: 110%;
@@ -1978,4 +1854,4 @@ p.text {
         color: black;
     }
 
-}
+} */
