--- a/Style.css
+++ b/Style.css
@@ -427,6 +427,10 @@ section.sectionformat {
     background-color: rgba(0, 0, 0, 0.897);
 }
 
+div#aboutimage {
+    background-image: url(titlebackground.png);
+}
+
 h1#abouth1 {
     font-size: 3em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -573,11 +577,19 @@ section#CurrentEintro {
     width: 110%;
     margin-left: -5%;
     padding-top: 3%;
+    margin-top: -1%;
     padding-bottom: 10%;
     background: rgb(34, 116, 195);
     background: linear-gradient(0deg, rgba(34, 116, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
-
+h1#achieveh112 {
+font-size: 7em;
+color: white;
+position: absolute;
+bottom: 40%;
+margin-left: 35%;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 /*slideshow stuffs*/
 
 
@@ -884,13 +896,23 @@ h1#sponsorheading {
     text-align: center;
 }
 
+h1#achieveh11 {
+    font-size: 7em;
+    color: white;
+    position: absolute;
+    bottom: 50%;
+    margin-left: 40%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
 
 /*contactus page*/
 
 section#contactusintro {
     width: 110%;
     margin-left: -5%;
-    padding-top: 1vw;
+    padding-top: 2vw;
+    margin-top: -1%;
     padding-bottom: 1vw;
     background: rgb(75, 44, 0);
     background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
@@ -902,17 +924,19 @@ div#form {
 
 iframe#contactform {
     padding-left: 35%;
+    border-radius: 10%;
 }
 
 div#maps {
     padding-top: 1%;
     padding-bottom: 2%;
-
+    border-radius: 10%;
     background-color: rgba(233, 233, 233, 0.445);
 }
 
 iframe#maps {
     padding-left: 33%;
+    border-radius: 10%;
 }
 
 h1#black {
