--- a/Style.css
+++ b/Style.css
@@ -1680,11 +1680,11 @@ h1#black {
 
 
 }
-
-@media (min-width : 1200px) {
+*/
+@media (max-width : 1400px) {
 
     /*nav bar*/
-/*
+
     header {
         background-color: black;
         margin: -0.75%;
@@ -1738,7 +1738,7 @@ h1#black {
 
 
     div.nav {
-        font-size: 1.3em;
+        font-size: 1.2em;
         margin-left: 20px;
         margin-top: -9px;
         padding-bottom: 35px;
@@ -1771,7 +1771,7 @@ h1#black {
     a.navobj:hover {}
 
     /* keeping an overline when on the page */
-/*
+
 
     div#sponsors {
         border-top: 3px solid white
@@ -1802,7 +1802,7 @@ h1#black {
     }
 
     /*main page*/
-/*
+
     img#centrallimg {
         width: 110%;
         margin-left: -1%;
@@ -1864,7 +1864,7 @@ h1#black {
     }
 
     /*ABout us page*/
-/*
+
     section.sectionformat {
         margin-left: -0.5%;
         width: 101%;
@@ -1938,7 +1938,7 @@ h1#black {
     
 
     /*contactus page*/
-/*
+
 
     section#contactusintro {
         width: 110%;
@@ -1972,4 +1972,4 @@ h1#black {
         color: black;
     }
 
-} */
+} 
