--- a/Style.css
+++ b/Style.css
@@ -856,9 +856,9 @@ div#thirdsection {
     margin-bottom: -10%;
 }
 
-/*sponosrs*/
+/*sponsors*/
 img#sponsorimg {
-    margin-left: 30%;
+    margin-left: 0%;
 }
 
 img#sponsorimg1 {
@@ -916,8 +916,6 @@ section#contactusintro {
     padding-top: 2vw;
     margin-top: -1%;
     padding-bottom: 1vw;
-    background: rgb(75, 44, 0);
-    background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
 }
 
 div#form {
@@ -1990,7 +1988,7 @@ h1#black {
 
     h1#achievetitle {
         font-family: 'Open Sans', sans-serif;
-        text-align: center;
+
         font-size: 3em;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         text-align: center;
@@ -2007,16 +2005,165 @@ h1#black {
 
     }
 
-
-
     h1#achieveh1 {
         font-size: 7em;
         color: white;
         position: absolute;
-        bottom: 50%;
-        margin-left: 35%;
+        bottom: 40%;
+        margin-left: 25%;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
+    }
+
+    /*resources*/
+    h1#achieveh11 {
+        font-size: 7em;
+        color: white;
+        position: absolute;
+        bottom: 30%;
+        margin-left: 30%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+    }
+
+    /*sponsors*/
+
+    img#apple {
+        margin-left: 38%;
+        width: 300px;
+        height: 200px;
+    }
+
+    img#te {
+        margin-left: 22%;
+        width: 300px;
+        height: 200px;
+    }
+
+    img#qorvo {
+        margin-left: 0%;
+        width: 200px;
+        height: 200px;
+    }
+
+    img#PG {
+        margin-left: 0%;
+        width: 200px;
+        height: 200px;
+    }
+
+    img#abco {
+        margin-left: 20%;
+        width: 300px;
+        height: 200px;
+    }
+
+    img#kali {
+        margin-left: 0%;
+        width: 250px;
+        height: 150px;
+        padding-bottom: 1%;
+    }
+
+    img#will {
+        margin-left: 0%;
+        padding-bottom: 1%;
+        width: 250px;
+        height: 150px;
+    }
+
+    img#gtc {
+        margin-left: 26%;
+        width: 300px;
+        height: 150px;
+    }
+
+    img#ptsa {
+        margin-left: 0%;
+        width: 350px;
+        height: 200px;
+    }
+
+    img#parents {
+        margin-left: 38%;
+        width: 300px;
+        height: 200px;
+    }
+
+    img#united {
+        margin-left: 12%;
+        width: 300px;
+        height: 150px;
+    }
+
+    img#network {
+        margin-left: 0%;
+        width: 350px;
+        height: 150px;
+    }
+
+    img#HT {
+        margin-left: 0%;
+        width: 300px;
+        height: 200px;
+    }
+
+
+
+    h1#achieveh113 {
+        font-size: 7em;
+        color: white;
+        position: absolute;
+        bottom: 45%;
+        margin-left: 33%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+    }
+
+    /*contactus page*/
+
+    section#contactusintro {
+        width: 110%;
+        margin-left: -5%;
+        padding-top: 2vw;
+        margin-top: -1%;
+        padding-bottom: 1vw;
+    }
+
+    div#form {
+        margin-bottom: 2vw;
+    }
+
+    iframe#contactform {
+        padding-left: 35%;
+        border-radius: 10%;
+    }
+
+    div#maps {
+        padding-top: 1%;
+        padding-bottom: 2%;
+        border-radius: 10%;
+        background-color: rgba(233, 233, 233, 0.445);
+    }
+
+    iframe#maps {
+        padding-left: 33%;
+        border-radius: 10%;
+    }
+
+    h1#black {
+        color: black;
+
+    }
+
+    h1#achieveh114 {
+        font-size: 7em;
+        color: white;
+        position: absolute;
+        bottom: 35%;
+        margin-left: 30%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
     }
 
 
