--- a/Style.css
+++ b/Style.css
@@ -248,14 +248,14 @@ p#aboutbutton:hover {
 
 /* section spacer*/
 
-div.bars {
+/* div.bars {
     background-color: rgb(0, 48, 119);
     margin-top: -1%;
     padding-top: 0.7%;
     position: absolute;
     width: 110%;
     margin-left: -1%;
-}
+} */
 
 
 
@@ -265,8 +265,9 @@ section.sponsorsection {
     background-color: lightblue;
     width: 110%;
     margin-left: -5%;
-    padding-top: 1%;
+    padding-top: 5%;
     padding-bottom: 4%;
+    border-top: blue 5px solid;
 
 }
 
