--- a/Style.css
+++ b/Style.css
@@ -2438,7 +2438,7 @@ h1#black {
     }
 
     h1#achieveh1 {
-        font-size: 7em;
+        font-size: 7em;u
         color: white;
         position: absolute;
         bottom: 40%;
